--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,95 @@
-<p>switches works!</p>
+<h2>Reactivos: <small>Switches</small></h2>
+
+<form [formGroup]="miForm" (ngSubmit)="guardar()">
+
+    <!--Radios-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-la">Genero</label>
+        <div class="col-sm-9">
+
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio" 
+                       value="M"
+                       id="radioMasculino"
+                       formControlName="genero">
+                <label class="form-check-label" for="radioMasculino">
+                  Masculino
+                </label>
+            </div>
+            
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio" 
+                       value="F"                       
+                       id="radioFemenino"
+                       formControlName="genero"
+                       >
+                <label class="form-check-label" for="radioFemenino">
+                  Femenino
+                </label>
+            </div>
+              
+        </div>
+
+    </div>
+
+    <!--switches-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-la">Notificaciones</label>
+        <div class="col-sm-9">
+            
+            <div class="form-check form-switch ">
+                <input class="form-check-input" 
+                       type="checkbox" 
+                       role="switch" 
+                       id="flexSwitchCheckChecked"
+                       formControlName="notificaciones">  
+                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+            </div>
+             
+        </div>
+    </div>  
+
+    <!--check-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-la"></label>
+        <div class="col-sm-9">
+
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="checkbox" 
+                       value="" 
+                       id="flexCheckDefault"
+                       formControlName="condiciones">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Terminos y condiciones de uso
+                </label>
+            </div>
+
+        </div>
+    </div>
+
+    <!--submit-->
+
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end"
+                    type="submit">
+                Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+<h5>Valor del formulario</h5>
+<pre> {{miForm.value | json}}</pre>
+
+<h5>Valid</h5>
+<pre> {{miForm.valid | json}}</pre>
+
+<h5>Persona</h5>
+<pre> {{persona | json}}</pre>
+
+<h5>Condiciones</h5>
+<pre> {{miForm.value | json}}</pre>
